modificando os arquivos para ficar certinho
acabei colocando tudo dentro de uma pasta que não precisava

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="nav-wrapper">
         <a href="#" aria-label="home">
           <svg  class="logo"  width="146" height="24">
-            <use xlink:href="images/logo.svg#logo"></use>
+            <use xlink:href="fem-manage-landing-page-part-9-master/images/logo.svg#logo"></use>
           </svg>
         </a>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
@@ -55,7 +55,7 @@
             <button class="button">Get Started</button>
           </div>
           <div class="hero__image">
-            <img class="mx-auto" src="images/illustration-intro.svg" alt="">
+            <img class="mx-auto" src="fem-manage-landing-page-part-9-master/images/illustration-intro.svg" alt="">
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
       <!-- Carousel here -->
       <ul class="slider">
         <li>
-          <img src="images/avatar-anisha.png" alt="">
+          <img src="fem-manage-landing-page-part-9-master/images/avatar-anisha.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Anisha Li</h3>
@@ -125,7 +125,7 @@
           </div>
         </li>
         <li>
-          <img src="images/avatar-ali.png" alt="">
+          <img src="fem-manage-landing-page-part-9-master/images/avatar-ali.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Ali Bravo</h3>
@@ -137,7 +137,7 @@
           </div>
         </li>
         <li>
-          <img src="images/avatar-richard.png" alt="">
+          <img src="fem-manage-landing-page-part-9-master/images/avatar-richard.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Richard Watts</h3>
@@ -148,7 +148,7 @@
           </div>
         </li>
         <li>
-          <img src="images/avatar-shanai.png" alt="">
+          <img src="fem-manage-landing-page-part-9-master/images/avatar-shanai.png" alt="">
 
           <div class="slider-content | flow" style="--flow-spacer: 1rem">
             <h3 class="fw-bold">Shanai Gough</h3>
@@ -181,34 +181,34 @@
       <div class="primary-footer__wrapper">
           <a class="primary-footer__logo" href="#" aria-label="home">
             <svg class="logo" width="146" height="24">
-              <use xlink:href="images/logo.svg#logo"></use>
+              <use xlink:href="fem-manage-landing-page-part-9-master/images/logo.svg#logo"></use>
             </svg>
           </a>
 
           <ul class="social-list" role="list" aria-label="Social links">
             <li><a aria-label="facebook" href="#">
                 <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+                  <use xlink:href="fem-manage-landing-page-part-9-master/images/social-icons.svg#icon-facebook"></use>
                 </svg></a>
             </li>
             <li><a aria-label="youtube" href="#">
                 <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+                  <use xlink:href="fem-manage-landing-page-part-9-master/images/social-icons.svg#icon-youtube"></use>
                 </svg>
               </a></li>
             <li><a aria-label="twitter" href="#">
                 <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+                  <use xlink:href="fem-manage-landing-page-part-9-master/images/social-icons.svg#icon-twitter"></use>
                 </svg>
               </a></li>
             <li><a aria-label="pinterest" href="#">
                 <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+                  <use xlink:href="fem-manage-landing-page-part-9-master/images/social-icons.svg#icon-pinterest"></use>
                 </svg>
               </a></li>
             <li><a aria-label="instragram" href="#">
                 <svg class="social-icon">
-                  <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+                  <use xlink:href="fem-manage-landing-page-part-9-master/images/social-icons.svg#icon-instagram"></use>
                 </svg>
               </a></li>
           </ul>
@@ -237,7 +237,7 @@
   </footer>
 
 
-  <script type="module" src="/fem-manage-landing-page-part-9-master/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
